DOC-2439: remove Options Available for HTML to PDF Conversion, Demo and Export to PDF Plugin reference and rename the API Reference to PDF Converter API reference.

--- a/modules/ROOT/pages/html-to-pdf-converter-api.adoc
+++ b/modules/ROOT/pages/html-to-pdf-converter-api.adoc
@@ -38,123 +38,6 @@ Tailor your PDF documents to suit your needs:
 * **Preprocessing and Customization**: Pre-process content to resolve merge tags and customize PDF document formatting, ensuring that the final output meets specific requirements and is ready for immediate use.
 * **Large-Scale Document Processing**: Utilize the API’s scalability to handle large volumes of PDF documents, maintaining consistent performance and reliability, essential for growing businesses.
 
-== Options Available for HTML to PDF Conversion
+== PDF Converter API Reference
 
-When using the converter service, the following options are available:
-
-* link:https://exportpdf.converter.tiny.cloud/docs#section/General/HTML[HTML^]
-* link:https://exportpdf.converter.tiny.cloud/docs#section/General/CSS[CSS^]
-* link:https://exportpdf.converter.tiny.cloud/docs#section/PDF-options[Options^]
-
-
-=== Demo
-
-++++
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML to PDF Converter API</title>
-  <style>
-
-    .container {
-    margin-top: 20px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background: #f9f9f9;
-    }
-
-    h1,
-    h2,
-    h3 {
-      color: #333;
-    }
-
-    textarea {
-      width: 100%;
-      height: 150px;
-      margin-bottom: 10px;
-    }
-
-    button-convert {
-      display: inline-block;
-      padding: 10px 20px;
-      font-size: 16px;
-      color: #fff;
-      background: #007BFF;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button-convert:hover {
-      background: #0056b3;
-    }
-
-    code {
-      display: block;
-      background: #eee;
-      padding: 10px;
-      margin: 20px 0;
-      border-radius: 5px;
-    }
-  </style>
-</head>
-
-<body>
-
-  <div class="container">
-    <p>Try converting HTML to PDF using the form below:</p>
-
-    <textarea id="htmlContent" placeholder="Add your HTML content here"><html><head><title>Example PDF</title></head><body><h1>Hello, World!</h1></body></html></textarea>
-    <div>
-      <button-convert onclick="convertToPDF()">Convert to PDF</button>
-    </div>
-
-    <script>
-      function convertToPDF() {
-            const htmlContent = document.getElementById('htmlContent').value;
-            const data = {
-                html: htmlContent,
-                options: { output: 'pdf' }
-            };
-
-            fetch('https://exportpdf.converter.tiny.cloud/v1/convert', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.blob())
-            .then(blob => {
-                const url = window.URL.createObjectURL(blob);
-                const a = document.createElement('a');
-                a.style.display = 'none';
-                a.href = url;
-                a.download = 'converted.pdf';
-                document.body.appendChild(a);
-                a.click();
-                window.URL.revokeObjectURL(url);
-            })
-            .catch(error => console.error('Error converting HTML to PDF:', error));
-        }
-    </script>
-  </div>
-
-</body>
-
-</html>
-++++
-
-
-== API Reference
-
-> Explore the comprehensive API documentation at link:https://exportpdf.converter.tiny.cloud/docs[API Reference documentation.^]
-
-== Export to PDF Plugin reference
-
-> Explore {productname}'s official {pluginname} Premium plugin documentation at link:https://www.tiny.cloud/docs/tinymce/latest/exportpdf/[{pluginname}.^]
+> Explore the comprehensive API documentation at link:https://exportpdf.converter.tiny.cloud/docs[PDF Converter API Reference documentation.^]
