--- a/modules/ROOT/pages/7.2.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.2.1-release-notes.adoc
@@ -26,4 +26,4 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 Previously, the “Open link” toolbar button and menu item were disabled when a link was partially selected or when the selection included multiple links.
 
-{productname} {release-version} addresses this issue. Now, the "Open link" toolbar button and menu item are enabled when any part of a link or multiple links are within the selection, even when the selection is not perfectly confined to a single link.
+{productname} {release-version} addresses this issue. Now, the "Open link" toolbar button and menu item are enabled when any part of a link or multiple links are within the selection.
