--- a/modules/ROOT/pages/7.2.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.2.1-release-notes.adoc
@@ -26,4 +26,4 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 Previously, resizing the editor caused the statusbar to render the help text incorrectly if it was too long. This was particularly problematic for long translations, as the statusbar did not handle extended text properly, leading to visual misalignment and hiding important elements.
 
-To fix this, the statusbar's CSS was updated to handle overflow text by setting properties like `overflow: hidden;` and adjusting the text height. As a result, the help text now overflows without disrupting the statusbar layout, ensuring a consistent appearance and visibility.
+To fix this, the statusbar's CSS was updated to handle this by retaining the help text on one line and hiding any overflowing text. As a result, the help text now overflows without disrupting the statusbar layout, ensuring a consistent appearance and visibility.
