DOC-2488: remove mention of option from importword_service_url.

--- a/modules/ROOT/partials/configuration/importword.adoc
+++ b/modules/ROOT/partials/configuration/importword.adoc
@@ -1,5 +1,5 @@
-[[importword-service-url-option]]
-== `importword_service_url` option
+[[importword-service-url]]
+== `importword_service_url`
 
 This option is used for setting the URL endpoint for the conversion service.
 
