--- a/modules/ROOT/partials/configuration/exportpdf.adoc
+++ b/modules/ROOT/partials/configuration/exportpdf.adoc
@@ -1,7 +1,7 @@
 [[exportpdf-service-url]]
 == `exportpdf_service_url`
 
-The {pluginname} uses the {productname} HTML to PDF converter service to generate the `document-name.pdf` files.
+The {pluginname} uses the HTML to PDF converter service to generate the `document-name.pdf` files.
 
 NOTE: The {pluginname} feature is currently only available `on-premise` and requires the `exportpdf_service_url` option to be configured. https://www.tiny.cloud/contact/[Contact us] if you require this feature.
 
