--- a/modules/ROOT/partials/configuration/exportword.adoc
+++ b/modules/ROOT/partials/configuration/exportword.adoc
@@ -1,7 +1,7 @@
 [[exportword-service-url]]
 == `exportword_service_url`
 
-The {pluginname} uses the {productname} HTML to DOCX converter service to generate the Word files.
+The {pluginname} uses the HTML to DOCX converter service to generate the Word files.
 
 NOTE: The {pluginname} feature is currently only available `on-premise` and requires the `exportword_service_url` option to be configured. https://www.tiny.cloud/contact/[Contact us] if you require this feature.
 
