--- a/modules/ROOT/pages/html-to-docx-converter-api.adoc
+++ b/modules/ROOT/pages/html-to-docx-converter-api.adoc
@@ -27,6 +27,7 @@ You can customize the DOCX output by specifying various options in your request:
 
 - **Headers and Footers**: Add custom headers and footers to your DOCX documents.
 - **Styles**: Define custom styles for different HTML elements to ensure your documents look exactly as desired.
+- **Page Format**: Select from a wide range of page formats, including Letter, Legal, Tabloid, and A4, ensuring your documents look perfect every time.
 
 == Ideal for Various Use Cases
 
