--- a/modules/ROOT/pages/7.3-release-notes.adoc
+++ b/modules/ROOT/pages/7.3-release-notes.adoc
@@ -39,7 +39,7 @@ The {productname} {release-version} release includes an accompanying release of 
 
 Previously, the Enhanced Code Editor plugin did not automatically format code with indentation, resulting in less readable source code for users.
 
-With {productname} {release-version}, the new `advcode_prettify_editor` option has been introduced. By default, this option is set to `true`, ensuring that code indentation is automatically formatted upon opening the Enhanced Code Editor view.
+With {productname} {release-version}, the new `advcode_prettify_editor` option has been introduced. By default, this option is set to `true`, ensuring that HTML content is automatically formatted upon opening the Enhanced Code Editor view.
 
 Additionally, users can manually format pasted HTML code in the Enhanced Code Editor with a single click using the new "Format Code" button.
 
