--- a/modules/ROOT/partials/configuration/advcode.adoc
+++ b/modules/ROOT/partials/configuration/advcode.adoc
@@ -28,9 +28,9 @@ include::partial$misc/admon-requires-7.3v.adoc[]
 
 As part of the {productname} 7.3 release, the {pluginname} plugin includes a new option, `advcode_prettify_getcontent`, which is set to `false` by default.
 
-When this option is set to `true` if will format the HTML code when `editor.getContent` is called.
+When this option is set to `true` it will format the HTML code when `editor.getContent` is called.
 
-This is equivalent when retrieving formatted content by calling `+tinymce.activeEditor.getContent({ prettify: true })+`, regardless of the option's status.
+This is equivalent to retrieving formatted content by calling `+tinymce.activeEditor.getContent({ prettify: true })+`, regardless of the option's status.
 
 Type : `boolean`,
 
