DOC-2482: update links and Import from Word and Export to Word service server-side component using Docker sub-section config changes to support v2.

--- a/modules/ROOT/pages/exportword.adoc
+++ b/modules/ROOT/pages/exportword.adoc
@@ -58,4 +58,4 @@ include::partial$commands/{plugincode}-cmds.adoc[][leveloffset=+1]
 
 == API Reference
 
-> Explore the comprehensive API documentation for the {pluginname} Premium plugin at https://exportdocx.converter.tiny.cloud/docs#section/Export-to-Word[Export to Word.^]
+> Explore the comprehensive API documentation for the {pluginname} Premium plugin at link:https://exportdocx.converter.tiny.cloud/v2/convert/docs#section/Export-to-Word[Export to Word.^]
