DOC-2481: Add revisionhistory_author.adoc

--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -98,6 +98,8 @@ include::partial$configuration/revisionhistory_fetch.adoc[leveloffset=+1]
 
 include::partial$configuration/revisionhistory_fetch_revision.adoc[leveloffset=+1]
 
+include::partial$configuration/revisionhistory_author.adoc[leveloffset=+1]
+
 include::partial$configuration/revisionhistory_css_url.adoc[leveloffset=+1]
 
 include::partial$configuration/revisionhistory_diff_classes.adoc[leveloffset=+1]
