DOC-2481: Add revisionhistory_display_author.adoc

--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -100,6 +100,8 @@ include::partial$configuration/revisionhistory_fetch_revision.adoc[leveloffset=+
 
 include::partial$configuration/revisionhistory_author.adoc[leveloffset=+1]
 
+include::partial$configuration/revisionhistory_display_author.adoc[leveloffset=+1]
+
 include::partial$configuration/revisionhistory_css_url.adoc[leveloffset=+1]
 
 include::partial$configuration/revisionhistory_diff_classes.adoc[leveloffset=+1]
