DOC-2481: Note that "Restore this version" button is disabled for `initial` and `draft` versions.

--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -26,7 +26,7 @@ The {pluginname} view is accessible via either the `revisionhistory` toolbar but
 The key components are:
 
 1. In the {pluginname} view header, there are two buttons.
-* `Restore this version`: Set the selected version's content to the editor and close the view.
+* `Restore this version`: Set the selected version's content to the editor and close the view. Note that this button is disabled for the `initial` and `draft` versions.
 * `Close`: Close the view.
 
 2. The readonly diff view presents the changes between the selected version and its immediate predecessor, clearly highlighting for easy recognition. The changes are also color-coded for clarity:
