--- a/modules/ROOT/partials/configuration/revisionhistory_author.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_author.adoc
@@ -1,7 +1,7 @@
 [[revisionhistory_author]]
 == `revisionhistory_author`
 
-This option configures the author to show for the initial and draft revisions in the Revision History sidebar.
+This option configures the author to show for the `initial` and `draft` revisions in the Revision History sidebar.
 
 *Type:* `+Object+`
 
