--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -91,6 +91,30 @@ The table below summarizes how versions are handled in the {pluginname}:
 | Yes                 | N/A           | Yes                | The saved versions and the draft version are shown
 |===
 
+== The Revision object
+
+The revision object is an `+Object+` that represents a version of the document. It contains the following fields:
+
+[cols="1,1,1,3",options="header"]
+|===
+| Field          | Type       | Required? | Description
+| `+revisionId+` | `+string+` | required  | The unique string ID of the revision.
+| `+createdAt+`  | `+string+` | required  | A UTC datetime string in ISO-8061 format.
+| `+content+`    | `+string+` | optional  | HTML string of the revision content. Empty string is considered as valid content.
+|===
+
+== The Author object
+
+The author object is an `+Object+` that represents the author of a revision. It contains the following fields:
+
+[cols="1,1,1,3",options="header"]
+|===
+| Field      | Type       | Required? | Description
+| `+id+`     | `+string+` | required  | The unique string ID of the author.
+| `+name+`   | `+string+` | optional  | The name of the revision author. If not provided, the default value is `Anonymous`.
+| `+avatar+` | `+string+` | optional  | The URL of the author's avatar image. If not provided, the default value is an auto-generated avatar using the author's initials.
+|===
+
 
 == Options
 
