--- a/modules/ROOT/partials/configuration/revisionhistory_author.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_author.adoc
@@ -3,16 +3,7 @@
 
 This option configures the author to show for the `initial` and `draft` revisions in the Revision History sidebar.
 
-*Type:* `+Object+`
-
-The author `+Object+` must have the following fields:
-[cols="1,1,1,3",options="header"]
-|===
-| Field      | Type       | Required? | Description
-| `+id+`     | `+string+` | required  | The unique string ID of the author.
-| `+name+`   | `+string+` | optional  | The name of the revision author. If not provided, the default value is `Anonymous`.
-| `+avatar+` | `+string+` | optional  | The URL of the author's avatar image. If not provided, the default value is an auto-generated avatar using the author's initials.
-|===
+*Type:* xref:#the-author-object[Author] `+Object+`
 
 === Example: using `revisionhistory_author`
 
