--- a/modules/ROOT/partials/configuration/revisionhistory_fetch.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_fetch.adoc
@@ -12,16 +12,7 @@ The {pluginname} plugin does not sort results before displaying them, allowing i
 
 *Input parameters:* None
 
-*Return data:* `+Array+` of revision `+Objects+`
-
-Each revision `+Object+` must have the following fields:
-[cols="1,1,1,3",options="header"]
-|===
-|Field |Type |Required? |Description
-|`+revisionId+` | `+string+` | required | The unique string ID of the revision.
-|`+createdAt+` | `+string+` | required | A UTC datetime string in ISO-8061 format.
-|`+content+` | `+string+` | optional | HTML string of the revision content. Empty string is considered as valid content.
-|===
+*Return data:* `+Array+` of xref:#the-revision-object[Revision] `+Objects+`
 
 === Example of `revisionhistory_fetch` response
 
