--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -2,7 +2,7 @@
 :navtitle: Revision History
 :description: A view that allows {productname} users to see historical snapshots of a document and an ability to restore from a snapshot
 :description_short: View containing historical snapshots of a document.
-:keywords: plugin, Revision History, history, version, snapshots, restore, changes
+:keywords: plugin, Revision History, history, version, snapshots, restore, changes, revision, diff
 :pluginname: Revision History
 :plugincode: revisionhistory
 :plugincategory: premium
@@ -11,7 +11,7 @@ include::partial$misc/admon-revisionhistory-paid-addon-pricing.adoc[]
 
 include::partial$misc/admon-requires-7.0v.adoc[]
 
-The {pluginname} plugin offers users the ability to view document changes over time and restore previous versions effortlessly.
+The {pluginname} plugin offers users the ability to view document changes over time and restore previous revisions effortlessly.
 
 == Interactive example
 
@@ -26,20 +26,20 @@ The {pluginname} view is accessible via either the `revisionhistory` toolbar but
 The key components are:
 
 1. In the {pluginname} view header, there are two buttons.
-* `Restore this version`: Set the selected version's content to the editor and close the view. Note that this button is disabled for the `initial` and `draft` versions.
+* `Restore this version`: Set the selected revision's content to the editor and close the view. Note that this button is disabled for the `initial` and `draft` revisions.
 * `Close`: Close the view.
 
-2. The readonly diff view presents the changes between the selected version and its immediate predecessor, clearly highlighting for easy recognition. The changes are also color-coded for clarity:
+2. The readonly diff view presents the changes between the selected revision and its immediate predecessor, clearly highlighting for easy recognition. The changes are also color-coded for clarity:
 * Red: Removed content.
 * Green: New content.
 * Yellow: Content being modified. Modifications to HTML content implies attributes or formatting (e.g. bold, italic, etc.).
-3. The revisions sidebar displays all available document versions. When a new version is selected, the diff view is updated accordingly.
+3. The revisions sidebar displays all available document revisions. When a new revision is selected, the diff view is updated accordingly.
 
 [NOTE]
 The default highlighting colors can be customized using the xref:revisionhistory_css_url[`+revisionhistory_css_url+`] option.
 
 [NOTE]
-The {pluginname} plugin interprets commented HTML as valid content, yet it disregards this content during the version comparison process. Consequently, a version containing solely commented content appears as empty in the user interface displaying the differential content.
+The {pluginname} plugin interprets commented HTML as valid content, yet it disregards this content during the revision comparison process. Consequently, a revision containing solely commented content appears as empty in the user interface displaying the differential content.
 
 == Basic setup
 
@@ -59,36 +59,36 @@ tinymce.init({
   toolbar: 'revisionhistory',
   // Required
   revisionhistory_fetch: () => new Promise((resolve) => {
-    const revisions = [];  // Replace this with an API request to get saved versions
+    const revisions = [];  // Replace this with an API request to get saved revisions
     resolve(revisions);
   })
 });
 ----
 
-== Understanding types of versions
+== Understanding types of revisions
 
-There are three types of versions in {pluginname} plugin:
+There are three types of revisions in {pluginname} plugin:
 
-* Initial Version: This version is generated during the {productname} `Loaded` event, with the editor's initial content.
-* Draft Version: This version is generated upon accessing the {pluginname}, reflecting the editor's current content. When included, it becomes the `latest version` and is placed at the top of the revisions list. Note that the draft version is not a saved version.
-* Saved Versions: These versions are saved in the client's storage and are displayed in the revisions list. They are fetched upon opening the {pluginname} view using the `revisionhistory_fetch` and `revisionhistory_fetch_revision` options.
+* Initial Revision: This revision is generated during the {productname} `Loaded` event, with the editor's initial content.
+* Draft Revision: This revision is generated upon accessing the {pluginname}, reflecting the editor's current content. When included, it becomes the `latest revision` and is placed at the top of the revisions list. Note that the draft revision is not a saved revision.
+* Saved Revisions: These revisions are saved in the client's storage and are displayed in the revisions list. They are fetched upon opening the {pluginname} view using the `revisionhistory_fetch` and `revisionhistory_fetch_revision` options.
 
-When dealing with a new document that has no saved versions, the {pluginname} plugin will typically maintain two versions: the `initial` and `draft` versions.
+When dealing with a new document that has no saved revisions, the {pluginname} plugin will typically maintain two revisions: the `initial` and `draft` revisions.
 
-For documents with saved versions, the `initial` version is disregarded by the {pluginname} plugin, assuming it's already part of the version history.
+For documents with saved revisions, the `initial` revision is disregarded by the {pluginname} plugin, assuming it's already part of the revisions list.
 
-If there are no changes to the content of the editor since initialization, the `initial` version is not displayed in the revisions list since it's identical to the `draft` version.
+If there are no changes to the content of the editor since initialization, the `initial` revision is not displayed in the revisions list since it's identical to the `draft` revision.
 
-The table below summarizes how versions are handled in the {pluginname}:
+The table below summarizes how revisions are handled in the {pluginname}:
 
 [cols="1,1,1,3", options="header"]
 |===
-| Has Initial Version | Draft Version | Has Saved Versions | Expectation
-| No                  | N/A           | No                 | No versions are shown
-| No                  | N/A           | Yes                | Only the saved versions are shown
-| Yes                 | N/A           | No                 | Only the draft version is shown
-| Yes                 | Different     | No                 | Both the initial and draft versions are shown
-| Yes                 | N/A           | Yes                | The saved versions and the draft version are shown
+| Has Initial Revision | Draft Revision | Has Saved Revisions | Expectation
+| No                  | N/A           | No                 | No revisions are shown
+| No                  | N/A           | Yes                | Only the saved revisions are shown
+| Yes                 | N/A           | No                 | Only the draft revision is shown
+| Yes                 | Different     | No                 | Both the initial and draft revisions are shown
+| Yes                 | N/A           | Yes                | The saved revisions and the draft revision are shown
 |===
 
 == The Revision object
@@ -99,6 +99,7 @@ The revision object is an `+Object+` that represents a version of the document. 
 |===
 | Field          | Type       | Required? | Description
 | `+revisionId+` | `+string+` | required  | The unique string ID of the revision.
+| `+author+`     | xref:#the-author-object[Author] `+Object+` | optional  | The author of the revision.
 | `+createdAt+`  | `+string+` | required  | A UTC datetime string in ISO-8061 format.
 | `+content+`    | `+string+` | optional  | HTML string of the revision content. Empty string is considered as valid content.
 |===
