--- a/modules/ROOT/partials/configuration/revisionhistory_fetch.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_fetch.adoc
@@ -1,12 +1,12 @@
 [[revisionhistory_fetch]]
 == `revisionhistory_fetch`
 
-The `revisionhistory_fetch` function retrieves saved versions and is **required** for the Revision History plugin to work. It is called when the user opens the Revision History view.
+The `revisionhistory_fetch` function retrieves saved revisions and is **required** for the Revision History plugin to work. It is called when the user opens the Revision History view.
 
 The `revisionhistory_fetch` option is an asynchronous function that returns a link:https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise] which resolves to an array of revisions.
 
 [NOTE]
-The {pluginname} plugin does not sort results before displaying them, allowing integrators to sort the results according to their preference. {companyname} recommends to sort the results in reverse chronological order, as this makes it easier for users to identify versions by date.
+The {pluginname} plugin does not sort results before displaying them, allowing integrators to sort the results according to their preference. {companyname} recommends to sort the results in reverse chronological order, as this makes it easier for users to identify revisions by date.
 
 *Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
@@ -57,6 +57,6 @@ tinymce.init({
     fetch('<API URL>')  // Update the URL and response handling code according to your API
     .then((response) => response.json())
     .then((data) => data)
-    .catch((error) => console.log('Failed to get versions\n' + error))
+    .catch((error) => console.log('Failed to get revisions\n' + error))
 });
 ----
